Adicionando MongoDB e página de histórico

--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -14,11 +14,11 @@
       <table>
         <tr>
           <td><b>Atividade</b></td>
-          <td><%= atividade %> (<%= atividadeTraduziza %>)</td>
+          <td><%= atividade %></td>
         </tr>
         <tr>
           <td><b>Tipo</b></td>
-          <td><%= tipo %> (<%= tipoTraduzido %>)</td>
+          <td><%= tipo %></td>
         </tr>
         <tr>
           <td><b>Participantes</b></td>
