--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -1,7 +1,9 @@
+<!-- Página que exibe os resultados da consulta a API de atividades, boredAPI -->
 <!DOCTYPE html>
 <html>
   <head>
     <link href="/css/activity.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="/images/timeIcon.png"/>
   </head>
   <body>
     <a href="javascript:history.back()">Voltar</a>
