--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,12 +1,15 @@
+<!-- Landingpage do sistema -->
 <!DOCTYPE html>
 <html>
   <head>
     <link href="/css/index.css" rel="stylesheet" type="text/css" />
-    <title>Bored app</title>
+    <link rel="icon" type="image/png" href="/images/timeIcon.png"/>
+
+    <title>OcupaTempo APP</title>
   </head>
   <body class="color">
     <div class="container">
-      <h1>Bem vindo!</h1>
+      <h1>Bem vindo ao OcupaTempo!</h1>
 
       <h2>
         Está sem nada para fazer? Entediado? Os botões abaixo oferecem boas
@@ -36,6 +39,13 @@
 
       <button onclick="location.href='/numero'" class="btn">
         CURIOSIDADES NUMÉRICAS
+      </button>
+    </div>
+    <br />
+    <div class="container">
+      <h1>Histórico de requisições</h1>
+      <button onclick="location.href='/history'" class="btn">
+        HISTÓRICO DE REQUISIÇÕES
       </button>
     </div>
   </body>
