--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                                 <input class="input" name="city_name" type="text" placeholder="Busque uma cidade...">
                             </div>
                             <div class="control">
-                                <button class="btn">
+                                 <button class="button is-info">
                                     Buscar
                                 </button>
                             </div>
